--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,6 @@
 name: LobbyPaintball
-version: 1.2-b1
+version: 1.3-dev_1.14.2
+api-version: 1.14
 authors: [CPx1989]
 description: Just another paintball plugin...Revamped!
 main: com.cpx1989.lpb.Paintball
@@ -8,7 +9,7 @@ softdepend:
 commands:
   lpb:
     description: LobbyPaintball
-    aliases: lp
+    aliases: [lp, lpball]
 permissions:
   lpb.reload:
     default: false
